<resources>

    <string name="app_name">Lab1-Activities</string>



    <string name="fpa_name">Nombre del lugar:</string>
    <string name="fpa_information">Información del lugar:</string>
    <string name="fpa_temperature">Temperatura: </string>
    <string name="fpa_recomendation">Recomendaciones sobre el lugar:</string>
    <string name="fpa_address">Direccion Lugar:</string>
    <string name="fpa_score">Puntuación del lugar:</string>
    <string name="fpa_image">Agregar imagen del lugar:</string>
    <string name="add_place">Agregar lugar:</string>

    <string name="place_name">Nombre del lugar:</string>
    <string name="place_info">Información del lugar:</string>
    <string name="place_score">Puntuación del lugar: </string>
    <string name="place_temperature">Temperatura: </string>
    <string name="place_recommendation">Recomendación: </string>
    <string name="place_address">Dirección: </string>





    <!--- Strings de config-->
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="messages_header">Configuration</string>

    <string name="preference_button">Usuario</string>
    <string name="check_user">Sesión</string>
    <string name="activate_notification">Activar notficaciones</string>
    <string name="activate_sound">Activar sonido</string>








</resources>